📚 Auto-update: News data refreshed - 2025-12-29 03:02 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -31502,5 +31502,61 @@
         "published": "Mon, 29 Dec 2025 06:00:00 +0530",
         "source": "Tech-Economic Times",
         "summary": "The year 2025 marked a pivotal shift in India's electric two-wheeler market. After losing over half its market share, Ola Electric stepped down as market leader, with TVS Motor rising to take its place. Bajaj Auto thrived during this period, and Ather Energy alongside Hero MotoCorp proved their mettle as they captured increased market attention."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/28/from-sonos-to-sauron-new-ceo-takes-on-high-end-home-security-startup-still-in-development/",
+        "title": "Sauron, the high-end home security startup for \u201csuper premium\u201d customers, plucks a new CEO out of Sonos",
+        "link": "https://techcrunch.com/2025/12/28/from-sonos-to-sauron-new-ceo-takes-on-high-end-home-security-startup-still-in-development/",
+        "published": "Mon, 29 Dec 2025 02:20:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Sauron is appearing on the scene as concerns rise about crime among the most wealthy."
+    },
+    {
+        "id": "https://lib.rs/crates/spherical-cow",
+        "title": "Spherical Cow",
+        "link": "https://lib.rs/crates/spherical-cow",
+        "published": "Sun, 28 Dec 2025 23:11:50 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46415458\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/3-charging-mistakes-to-avoid/",
+        "title": "How you're charging your tablet is quietly killing it - 3 mistakes to avoid (and the right way)",
+        "link": "https://www.zdnet.com/article/3-charging-mistakes-to-avoid/",
+        "published": "Mon, 29 Dec 2025 01:00:39 GMT",
+        "source": "Latest news",
+        "summary": "A tablet is only as good as its battery, so it's time to start taking better care of it."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/newsletters/morning-dispatch/qcomm-set-for-cash-burn-scrutiny-ola-elec-falls-back-in-ev-race/articleshow/126222293.cms",
+        "title": "Qcomm faces cash burn test; Ola Electric slips in EV race",
+        "link": "https://economictimes.indiatimes.com/tech/newsletters/morning-dispatch/qcomm-set-for-cash-burn-scrutiny-ola-elec-falls-back-in-ev-race/articleshow/126222293.cms",
+        "published": "Mon, 29 Dec 2025 07:07:41 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Happy Monday! Zepto going public could put India\u2019s quick commerce space under scrutiny. This and more in today\u2019s ETtech Morning Dispatch."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/arctus-aerospace-unmanned-aircraft-real-time-earth-intelligence",
+        "title": "Arctus Aerospace is building unmanned aircraft for real-time Earth intelligence",
+        "link": "https://yourstory.com/2025/12/arctus-aerospace-unmanned-aircraft-real-time-earth-intelligence",
+        "published": "Mon, 29 Dec 2025 01:30:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "From oil and gas to insurance, the startup wants to give businesses faster and clearer insights from the sky."
+    },
+    {
+        "id": "https://inc42.com/buzz/2025-indian-startup-trends-zeptos-d-street-dash-more/",
+        "title": "2025 Indian Startup Trends, Zepto\u2019s D-Street Dash & More",
+        "link": "https://inc42.com/buzz/2025-indian-startup-trends-zeptos-d-street-dash-more/",
+        "published": "Mon, 29 Dec 2025 02:30:11 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"2025 Indian Startup Trends, Zepto\u2019s D-Street Dash &amp; More\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-Daily-Brief-63.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Inc42\u2019s Startup Trends Report Is Her Initial public offerings (IPOs) were a defining theme for the Indian startup ecosystem in&#8230;"
+    },
+    {
+        "id": "https://inc42.com/features/wakefits-next-big-bets/",
+        "title": "Wakefit\u2019s Next Big Bets",
+        "link": "https://inc42.com/features/wakefits-next-big-bets/",
+        "published": "Mon, 29 Dec 2025 01:30:39 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Wakefit\u2019s Next Big Bets\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/ftr-wakefit.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Wakefit was jolted awake at the end of March 2025, when it was still in losses for FY25. Since then,&#8230;"
     }
 ]
