📚 Auto-update: News data refreshed - 2025-12-29 04:41 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -31558,5 +31558,29 @@
         "published": "Mon, 29 Dec 2025 01:30:39 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Wakefit\u2019s Next Big Bets\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/ftr-wakefit.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Wakefit was jolted awake at the end of March 2025, when it was still in losses for FY25. Since then,&#8230;"
+    },
+    {
+        "id": "https://maurycyz.com/misc/make-up-tags/",
+        "title": "You can make up HTML tags",
+        "link": "https://maurycyz.com/misc/make-up-tags/",
+        "published": "Mon, 29 Dec 2025 02:47:44 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46416945\">Comments</a>"
+    },
+    {
+        "id": "https://www.npr.org/2025/12/28/nx-s1-5656190/ai-chips-memory-prices-ram",
+        "title": "As AI gobbles up chips, prices for devices may rise",
+        "link": "https://www.npr.org/2025/12/28/nx-s1-5656190/ai-chips-memory-prices-ram",
+        "published": "Sun, 28 Dec 2025 22:52:21 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46415338\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/china-accused-of-weaponising-ai-to-undermine-taiwans-democracy/articleshow/126224061.cms",
+        "title": "China accused of weaponising AI to undermine Taiwan's democracy",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/china-accused-of-weaponising-ai-to-undermine-taiwans-democracy/articleshow/126224061.cms",
+        "published": "Mon, 29 Dec 2025 09:45:56 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "New documents have raised concerns over China's alleged use of AI to influence Taiwan's elections, with reports warning of coordinated digital manipulation, fake online personas, and efforts to shape public opinion, prompting calls for stronger safeguards to protect democratic processes."
     }
 ]
