--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -31582,5 +31582,61 @@
         "published": "Mon, 29 Dec 2025 09:45:56 +0530",
         "source": "Tech-Economic Times",
         "summary": "New documents have raised concerns over China's alleged use of AI to influence Taiwan's elections, with reports warning of coordinated digital manipulation, fake online personas, and efforts to shape public opinion, prompting calls for stronger safeguards to protect democratic processes."
+    },
+    {
+        "id": "https://forum.torproject.org/t/staying-ahead-of-censors-in-2025-what-weve-learned-from-fighting-censorship-in-iran-and-russia/20898",
+        "title": "Staying ahead of censors in 2025",
+        "link": "https://forum.torproject.org/t/staying-ahead-of-censors-in-2025-what-weve-learned-from-fighting-censorship-in-iran-and-russia/20898",
+        "published": "Mon, 29 Dec 2025 05:47:40 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46417844\">Comments</a>"
+    },
+    {
+        "id": "https://www.bbc.com/news/articles/cj4qp17e1lqo",
+        "title": "John Simpson: 'I've reported on 40 wars but I've never seen a year like 2025'",
+        "link": "https://www.bbc.com/news/articles/cj4qp17e1lqo",
+        "published": "Mon, 29 Dec 2025 05:21:06 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46417724\">Comments</a>"
+    },
+    {
+        "id": "https://gardinerbryant.com/why-valves-retiring-the-steam-deck-lcd/",
+        "title": "Why I think Valve\u2019s retiring the Steam Deck LCD",
+        "link": "https://gardinerbryant.com/why-valves-retiring-the-steam-deck-lcd/",
+        "published": "Mon, 29 Dec 2025 03:44:12 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46417252\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/china-says-to-launch-digital-currency-action-plan/articleshow/126225630.cms",
+        "title": "China says to launch digital currency action plan",
+        "link": "https://economictimes.indiatimes.com/tech/technology/china-says-to-launch-digital-currency-action-plan/articleshow/126225630.cms",
+        "published": "Mon, 29 Dec 2025 11:20:02 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The \"action plan\" will see banks pay interest on balances held by clients in digital yuan -- a move to incentivise broader adoption of the currency."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/indias-data-centre-capacity-set-to-touch-14gw-by-2035-report/articleshow/126225100.cms",
+        "title": "India's data centre capacity set to touch 14GW by 2035: Report",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/indias-data-centre-capacity-set-to-touch-14gw-by-2035-report/articleshow/126225100.cms",
+        "published": "Mon, 29 Dec 2025 10:55:52 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The data landscape in India is poised for a transformative leap, with estimates indicating a growth from 1.5 GW to an impressive 14 GW by 2035. This remarkable increase is largely attributed to the rising needs for artificial intelligence, cloud solutions, and the rollout of 5G technology."
+    },
+    {
+        "id": "https://inc42.com/resources/avalaras-dulles-krishnan-on-the-compliance-decisions-that-matter-as-indian-startups-scale-in-the-us/",
+        "title": "Avalara\u2019s Dulles Krishnan On The Compliance Decisions That Matter As Indian Startups Scale In The US",
+        "link": "https://inc42.com/resources/avalaras-dulles-krishnan-on-the-compliance-decisions-that-matter-as-indian-startups-scale-in-the-us/",
+        "published": "Mon, 29 Dec 2025 05:30:15 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Avalara\u2019s Dulles Krishnan On The Compliance Decisions That Matter As Indian Startups Scale In The US\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Avalara-Interview-Feature-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />The U.S. market offers significant expansion potential, but for Indian founders, scaling requires navigating a complex layer of tax and&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-ai-judicial-administration-viksit-bharat-goals-supreme-court/",
+        "title": "How AI Can Make Judicial Administration a Significant Contributor to the Viksit Bharat Goal",
+        "link": "https://www.medianama.com/2025/12/223-ai-judicial-administration-viksit-bharat-goals-supreme-court/",
+        "published": "Mon, 29 Dec 2025 05:52:17 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>India\u2019s push towards Viksit Bharat hinges on strong institutions. The Supreme Court\u2019s proposal to use AI in judicial administration could play a decisive role in reducing delays and improving governance.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-ai-judicial-administration-viksit-bharat-goals-supreme-court/\">How AI Can Make Judicial Administration a Significant Contributor to the Viksit Bharat Goal</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p"
     }
 ]
