📚 Auto-update: News data refreshed - 2025-12-29 07:18 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -31638,5 +31638,21 @@
         "published": "Mon, 29 Dec 2025 05:52:17 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>India\u2019s push towards Viksit Bharat hinges on strong institutions. The Supreme Court\u2019s proposal to use AI in judicial administration could play a decisive role in reducing delays and improving governance.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-ai-judicial-administration-viksit-bharat-goals-supreme-court/\">How AI Can Make Judicial Administration a Significant Contributor to the Viksit Bharat Goal</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p"
+    },
+    {
+        "id": "https://www.wired.com/story/home-chef-promo-code/",
+        "title": "Home Chef Promo Code: 50% Off",
+        "link": "https://www.wired.com/story/home-chef-promo-code/",
+        "published": "Mon, 29 Dec 2025 07:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Enjoy up to 50% off deliveries, free meals, and more with the latest Home Chef coupons."
+    },
+    {
+        "id": "https://github.com/HarryR/z80ai",
+        "title": "Show HN: Z80-\u03bcLM, a 'Conversational AI' That Fits in 40KB",
+        "link": "https://github.com/HarryR/z80ai",
+        "published": "Mon, 29 Dec 2025 05:41:24 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46417815\">Comments</a>"
     }
 ]
