--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -31654,5 +31654,21 @@
         "published": "Mon, 29 Dec 2025 05:41:24 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46417815\">Comments</a>"
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/best-wireless-charger-140036359.html?src=rss",
+        "title": "The best wireless chargers for 2026",
+        "link": "https://www.engadget.com/computing/accessories/best-wireless-charger-140036359.html?src=rss",
+        "published": "Mon, 29 Dec 2025 08:00:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Imagine never having to fumble with a charging cable again. That's the magic of a wireless charger. Not only does going wireless clear up your space and make charging as simple as setting your phone down, but it\u2019s also surprisingly versatile. Whether you\u2019re looking for a sleek charging pad for your nightstand, a stand that keeps your phone propped up on your desk or even a foldable charger for convenient travel, there's a wireless charger designed to fit your lifestyle. Some can even double a"
+    },
+    {
+        "id": "https://rickcarlino.com/notes/electronics/my-first-meshtastic-network.html",
+        "title": "My First Meshtastic Network",
+        "link": "https://rickcarlino.com/notes/electronics/my-first-meshtastic-network.html",
+        "published": "Mon, 29 Dec 2025 05:12:58 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46417676\">Comments</a>"
     }
 ]
