--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -31670,5 +31670,29 @@
         "published": "Mon, 29 Dec 2025 05:12:58 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46417676\">Comments</a>"
+    },
+    {
+        "id": "https://nilch.org",
+        "title": "Show HN: My not-for-profit search engine with no ads, no AI, & all DDG bangs",
+        "link": "https://nilch.org",
+        "published": "Mon, 29 Dec 2025 05:25:25 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46417748\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/zeptos-ipo-plans-a-look-at-the-journey-so-far/articleshow/126227466.cms",
+        "title": "Zepto\u2019s IPO plans: A look at the journey so far",
+        "link": "https://economictimes.indiatimes.com/tech/technology/zeptos-ipo-plans-a-look-at-the-journey-so-far/articleshow/126227466.cms",
+        "published": "Mon, 29 Dec 2025 13:31:11 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Zepto has filed confidential IPO papers with Sebi and is targeting a public listing in next year in the July\u2013September quarter. The issue could raise about $1.3 billion as the company reports rapid revenue growth but widening losses. In addition, Zepto's IPO is expected to intensify competition and scrutiny in India\u2019s fast-growing quick commerce market. Here\u2019s a look at how Zepto\u2019s IPO journey so far."
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-delhi-high-court-e-kyc-verification-website-domain-name-registrations/",
+        "title": "Delhi High Court Mandates e-KYC Verification For Website Domain Name Registrations In India: What This Means",
+        "link": "https://www.medianama.com/2025/12/223-delhi-high-court-e-kyc-verification-website-domain-name-registrations/",
+        "published": "Mon, 29 Dec 2025 09:11:41 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>The Delhi High Court has ordered e-KYC verification for all online domain name registrations in India. Notably, the order stems from a civil suit that Dabur India had filed.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-delhi-high-court-e-kyc-verification-website-domain-name-registrations/\">Delhi High Court Mandates e-KYC Verification For Website Domain Name Registrations In India: What This Means</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
