📚 Auto-update: News data refreshed - 2025-12-29 10:13 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -31694,5 +31694,45 @@
         "published": "Mon, 29 Dec 2025 09:11:41 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>The Delhi High Court has ordered e-KYC verification for all online domain name registrations in India. Notably, the order stems from a civil suit that Dabur India had filed.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-delhi-high-court-e-kyc-verification-website-domain-name-registrations/\">Delhi High Court Mandates e-KYC Verification For Website Domain Name Registrations In India: What This Means</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/29/youve-been-targeted-by-government-spyware-now-what/",
+        "title": "You\u2019ve been targeted by government spyware. Now what?",
+        "link": "https://techcrunch.com/2025/12/29/youve-been-targeted-by-government-spyware-now-what/",
+        "published": "Mon, 29 Dec 2025 10:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Tech companies are increasingly warning their customers that they have been targeted by governments with advanced government spyware, such as NSO's Pegasus or Paragon's Graphite. What happens after receiving a threat notification?"
+    },
+    {
+        "id": "https://www.wired.com/story/the-earth-is-nearing-an-environmental-tipping-point/",
+        "title": "The Earth Is Nearing an Environmental Tipping Point",
+        "link": "https://www.wired.com/story/the-earth-is-nearing-an-environmental-tipping-point/",
+        "published": "Mon, 29 Dec 2025 10:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Today\u2019s global coral bleaching events are the worst kind of climate warning."
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/best-iphone-accessories-140022449.html?src=rss",
+        "title": "The best iPhone accessories for 2026",
+        "link": "https://www.engadget.com/computing/accessories/best-iphone-accessories-140022449.html?src=rss",
+        "published": "Mon, 29 Dec 2025 10:00:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The right accessories can make your iPhone feel more capable and more personal. Whether you want to protect your phone, improve your photos or stay powered during a long day out, there are plenty of accessories that can make a real difference. MagSafe gear has opened the door for new chargers, stands and mounts, while portable batteries and compact lenses can upgrade your everyday routine.<br /><br />We tested a range of products to find the best iPhone accessories that offer practical benefi"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/softbank-nears-deal-for-data-center-investment-firm-digitalbridge-bloomberg-news/articleshow/126229002.cms",
+        "title": "SoftBank nears deal for data center investment firm DigitalBridge: Bloomberg News",
+        "link": "https://economictimes.indiatimes.com/tech/technology/softbank-nears-deal-for-data-center-investment-firm-digitalbridge-bloomberg-news/articleshow/126229002.cms",
+        "published": "Mon, 29 Dec 2025 14:46:28 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "SoftBank nears deal for data center investment firm DigitalBridge, Bloomberg News reports"
+    },
+    {
+        "id": "https://inc42.com/resources/lending-payments-and-dpdp-outlook-2026/",
+        "title": "Lending, Payments, And DPDP: Outlook 2026",
+        "link": "https://inc42.com/resources/lending-payments-and-dpdp-outlook-2026/",
+        "published": "Mon, 29 Dec 2025 10:01:18 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Lending, Payments, And DPDP: Outlook 2026\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Untitled-design-43.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />2025 has been a strong year, and 2026 is shaping up to be an exceptionally busy one across the ecosystem.&#8230;"
     }
 ]
