📚 Auto-update: News data refreshed - 2025-12-29 11:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -31734,5 +31734,77 @@
         "published": "Mon, 29 Dec 2025 10:01:18 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Lending, Payments, And DPDP: Outlook 2026\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Untitled-design-43.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />2025 has been a strong year, and 2026 is shaping up to be an exceptionally busy one across the ecosystem.&#8230;"
+    },
+    {
+        "id": "https://www.wired.com/story/3-tricks-google-gemini-live-latest-major-upgrade/",
+        "title": "3 New Tricks to Try With Google Gemini Live After Its Latest Major Upgrade",
+        "link": "https://www.wired.com/story/3-tricks-google-gemini-live-latest-major-upgrade/",
+        "published": "Mon, 29 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Google's AI is now even smarter, and more versatile."
+    },
+    {
+        "id": "https://www.wired.com/story/expired-tired-wired-surveillance-state/",
+        "title": "The New Surveillance State Is You",
+        "link": "https://www.wired.com/story/expired-tired-wired-surveillance-state/",
+        "published": "Mon, 29 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Privacy may be dead, but civilians are turning conventional wisdom on its head by surveilling the cops as much as the cops surveil them."
+    },
+    {
+        "id": "https://www.wired.com/story/most-dangerous-people-on-the-internet-2025/",
+        "title": "The Most Dangerous People on the Internet in 2025",
+        "link": "https://www.wired.com/story/most-dangerous-people-on-the-internet-2025/",
+        "published": "Mon, 29 Dec 2025 10:30:00 +0000",
+        "source": "WIRED",
+        "summary": "From Donald Trump to DOGE to Chinese hackers, this year the internet's chaos caused outsized real-world harm."
+    },
+    {
+        "id": "https://teodordyakov.github.io/brainfuck-agi/",
+        "title": "Asking Gemini 3 for Brainf*ck code puts it in an infinite loop",
+        "link": "https://teodordyakov.github.io/brainfuck-agi/",
+        "published": "Mon, 29 Dec 2025 09:40:09 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46418966\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/mamaearth-founder-varun-alagh-buys-0-6-stake-in-company-for-rs-50-crore/articleshow/126230310.cms",
+        "title": "Mamaearth founder Varun Alagh buys 0.6% stake in company for Rs 50 crore",
+        "link": "https://economictimes.indiatimes.com/tech/technology/mamaearth-founder-varun-alagh-buys-0-6-stake-in-company-for-rs-50-crore/articleshow/126230310.cms",
+        "published": "Mon, 29 Dec 2025 16:01:33 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Honasa Consumer founder Varun Alagh has bought a 0.6% stake in the company for Rs 50 crore, his second purchase since its 2023 listing. The move lifted Honasa shares by 2.7% on Monday. Promoter holding has risen to 35.54% following the transaction."
+    },
+    {
+        "id": "https://inc42.com/buzz/flipkart-to-exit-flying-machine-parent-in-inr-135-cr-deal/",
+        "title": "Flipkart To Exit Flying Machine Parent In INR 135 Cr Deal",
+        "link": "https://inc42.com/buzz/flipkart-to-exit-flying-machine-parent-in-inr-135-cr-deal/",
+        "published": "Mon, 29 Dec 2025 11:03:18 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Flipkart To Exit Flying Machine Parent In INR 135 Cr Deal\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/10/flipkart-walmart-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Adding to its selling spree in recent months, ecommerce major Flipkart will now be selling its entire stake in clothing&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/the-souled-store-fy25-profit-falls-38-to-inr-11-cr-despite-37-revenue-growth/",
+        "title": "The Souled Store FY25: Profit Falls 38% To INR 11 Cr Despite 37% Revenue Growth",
+        "link": "https://inc42.com/buzz/the-souled-store-fy25-profit-falls-38-to-inr-11-cr-despite-37-revenue-growth/",
+        "published": "Mon, 29 Dec 2025 10:44:12 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"The Souled Store FY25: Profit Falls 38% To INR 11 Cr Despite 37% Revenue Growth\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Artboard-16-100.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />After turning profitable in FY24, D2C fashion brand The Souled Store extended its profitability streak in FY25. However, its net&#8230;"
+    },
+    {
+        "id": "https://inc42.com/features/bengaluru-regains-the-crown-of-indias-top-startup-hub/",
+        "title": "Bengaluru Regains The Crown Of India\u2019s Top Startup Hub",
+        "link": "https://inc42.com/features/bengaluru-regains-the-crown-of-indias-top-startup-hub/",
+        "published": "Mon, 29 Dec 2025 10:23:03 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Bengaluru Regains The Crown Of India\u2019s Top Startup Hub\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-100-4-4.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />After two years of correction and recalibration, 2025 marked a year of stabilisation for India\u2019s startup funding ecosystem. According to&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-dtc-aadhaar-mandatory-pink-saheli-bus-card-delhi/",
+        "title": "Delhi Transport Corporation to Introduce Aadhaar-Linked Smart Cards for Women\u2019s Free Bus Travel in January 2026",
+        "link": "https://www.medianama.com/2025/12/223-dtc-aadhaar-mandatory-pink-saheli-bus-card-delhi/",
+        "published": "Mon, 29 Dec 2025 10:38:38 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Delhi is set to roll out Aadhaar-linked Pink Saheli Smart Cards for women commuters, replacing the paper-based pink ticket system on Delhi Transport Corporation buses from January 2026.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-dtc-aadhaar-mandatory-pink-saheli-bus-card-delhi/\">Delhi Transport Corporation to Introduce Aadhaar-Linked Smart Cards for Women\u2019s Free Bus Travel in January 2026</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
